--- a/contacto.html
+++ b/contacto.html
@@ -47,7 +47,7 @@
 
 
 
-  <button class="navbar-toggle" type="button" data-toggle=collapse data-target="#navmenu">
+  <button class="navbar-toggler custom-toggler" type="button" data-toggle=collapse data-target="#navmenu">
     <span class="navbar-toggler-icon"></span>
   </button>
 
