--- a/bio.html
+++ b/bio.html
@@ -4,7 +4,7 @@
 
   <meta charset="UTF-8">
   
-  <meta name="keywords" content="Gian Scaduto, Fotografia, Estudio, Cuadros, Comodoro, Rivadavia, Sesiones, Eventos">
+  <meta name="keywords" content="Gian Scaduto, Fotografia, Estudio, Cuadros, Comodoro, Rivadavia, Sesiones, Eventos, Biografia, Fotografo, Independiente, Camara">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
@@ -73,18 +73,18 @@
 <main class="bioMain">
 
 
-<b>Acerca de Gian Scaduto... </b> 
+<h1><b>Acerca de Gian Scaduto... </b><h1>
 
-<br><br>
+<br>
 	
 
 
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-	proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+	proident, sunt in culpa qui officia deserunt mollit anim id est laborum<p>
 
 
 </main>
